tests/transpiler/x/py/cross_join.error
run: exit status 1
Traceback (most recent call last):
  File "/workspace/mochi/tests/transpiler/x/py/cross_join.py", line 25, in <module>
    result = [Result(o.id, o.customerId, c["name"], o.total) for o in orders for c in customers]
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/workspace/mochi/tests/transpiler/x/py/cross_join.py", line 25, in <listcomp>
    result = [Result(o.id, o.customerId, c["name"], o.total) for o in orders for c in customers]
                                         ~^^^^^^^^
TypeError: 'Customer' object is not subscriptable
