tests/transpiler/x/py/cross_join.py
# Code generated by Mochi v0.10.34 - DO NOT EDIT
from dataclasses import dataclass
from typing import List, Dict

@dataclass
class Customer:
    id: int
    name: str

customers = [Customer(1, "Alice"), Customer(2, "Bob"), Customer(3, "Charlie")]
@dataclass
class Order:
    id: int
    customerId: int
    total: int

orders = [Order(100, 1, 250), Order(101, 2, 125), Order(102, 1, 300)]
@dataclass
class Result:
    orderId: int
    orderCustomerId: int
    pairedCustomerName: any
    orderTotal: int

result = [Result(o.id, o.customerId, c["name"], o.total) for o in orders for c in customers]
print("--- Cross Join: All order-customer pairs ---")
for entry in result:
    print(" ".join(str(x) for x in ["Order", entry["orderId"], "(customerId:", entry["orderCustomerId"], ", total: $", entry["orderTotal"], ") paired with", entry["pairedCustomerName"]]).rstrip())
